add stylesheet to demo

--- a/demo/html/index.html
+++ b/demo/html/index.html
@@ -8,31 +8,35 @@
             }
         </script>
         <title>Page Title</title>
-    </head>
+        <!-- <link rel="stylesheet" href="style.css"> -->
     <body>
         <header>This is a header</header>
         <nav>This is a navigation menu with <a href="#">item1</a> and <a href="#">item2</a></nav>
         <section>
-            This is a <u>section</u>
-        </section>
-        <article>
-            And this an <b>article</b>
-            
-            <h1>This is a Heading</h1>
-            <p>This is a paragraph.</p>
-
             <p>
-                You can also style/mark just a <span style="color:brown">span inside a</span> paragraph or something<br>
-                We use a button with Javascript here in order to show how it was before it was cool<br>
-                <button onclick="ClickMe()">Click me</button>
-                <input type="text" id="textinput" placeholder="type your text...">
+                This is a <u>section</u> as for introduction
             </p>
+        </section>
+        <section class="flex">
+            <article>
+                And this an <b>article</b>
+                
+                <h1>This is a Heading</h1>
+                <p>This is a paragraph.</p>
 
-            <p>this is a new paragraph with a <br>line break</p>
-        </article>
-        <aside>
-            <i>Aside</i> should be used as a sidebar
-        </aside>
+                <p>
+                    You can also style/mark just a <span style="color:brown">span inside a</span> paragraph or something<br>
+                    We use a button with Javascript here in order to show how it was before it was cool<br>
+                    <button onclick="ClickMe()">Click me</button>
+                    <input type="text" id="textinput" placeholder="type your text...">
+                </p>
+
+                <p>this is a new paragraph with a <br>line break</p>
+            </article>
+            <aside>
+                <i>Aside</i> could be used as a sidebar
+            </aside>
+        </section>
         <footer>This is a footer of your webpage</footer>
     </body>
 </html>
